# truv_compression

./: Cargo.toml  LICENSE  README.md  large_input.truv
benches/: compression_bench.rs
src/: compress.rs  decompress.rs  header.rs  huffman.rs  lib.rs  main.rs
